add dockerfile and docker compose

--- a/UmbracoOnDocker/UmbracoOnDocker.csproj
+++ b/UmbracoOnDocker/UmbracoOnDocker.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.18.1" />
     <PackageReference Include="Umbraco.Cms" Version="12.0.1" />
   </ItemGroup>
 
@@ -29,6 +30,8 @@
     <RazorCompileOnBuild>false</RazorCompileOnBuild>
     <RazorCompileOnPublish>false</RazorCompileOnPublish>
     <UserSecretsId>17ffb062-929a-40bd-900f-217e8b0ef37e</UserSecretsId>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
   
 </Project>
