--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -23,6 +23,6 @@ jobs:
     - name: Restore dependencies
       run: dotnet restore ./UmbracoOnDocker/UmbracoOnDocker.csproj
     - name: Build
-      run: dotnet build --no-restore
+      run: dotnet build ./UmbracoOnDocker/UmbracoOnDocker.csproj --no-restore
     - name: Test
       run: dotnet test --no-build --verbosity normal
