--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -25,4 +25,4 @@ jobs:
     - name: Build
       run: dotnet build ./UmbracoOnDocker/UmbracoOnDocker.csproj --no-restore
     - name: Test
-      run: dotnet test --no-build --verbosity normal
+      run: dotnet test  ./UmbracoOnDocker/UmbracoOnDocker.csproj --no-build --verbosity normal
